--- a/hola mundo.html
+++ b/hola mundo.html
@@ -12,5 +12,7 @@
 		<h2> <em>TUTORIAL DE ESTE VIDEO </em> </h2>
 		<p> para que la letra sea cursiva es con <"em"> 
 https://learndigital.withgoogle.com/activate/course/web-development-I/lesson/1349#!#%2F </p>
+		<p>PRACTICAR DE ACÁ    
+		https://www.w3schools.com/ </p>
 	</body>
 </html>
