--- a/hola mundo.html
+++ b/hola mundo.html
@@ -10,9 +10,9 @@
 		<p> Este es un párrafo donde explicaré todo lo relacionado
 		    al segundo párrafo que corresponde a h2 </p>
 		<h2> <em>TUTORIAL DE ESTE VIDEO </em> </h2>
-		<p> para que la letra sea cursiva es con <"em"> 
-https://learndigital.withgoogle.com/activate/course/web-development-I/lesson/1349#!#%2F </p>
-		<p>PRACTICAR DE ACÁ    
-		https://www.w3schools.com/ </p>
+		<a href="https://learndigital.withgoogle.com/activate/course/web-development-I/lesson/1349#!#%2F" >Link</a>
+		<p> para que la letra sea cursiva es con <"em">  </p>
+		<h2>PRACTICAR DE ACÁ</h2>
+		<a href="https://www.w3schools.com/ ">Link2</a>
 	</body>
 </html>
