etiqueta Br añadida

--- a/hola mundo.html
+++ b/hola mundo.html
@@ -13,6 +13,7 @@
 		<a href="https://learndigital.withgoogle.com/activate/course/web-development-I/lesson/1349#!#%2F" >Link</a>
 		<p> para que la letra sea cursiva es con <"em">  </p>
 		<h2>PRACTICAR DE ACÁ</h2>
-		<a href="https://www.w3schools.com/ ">Link2</a>
+		<a href="https://www.w3schools.com/ ">Link2</a><br/>
+		<a>La etiqueta "Br" permite un salto de línea</a>
 	</body>
 </html>
