--- a/hola mundo.html
+++ b/hola mundo.html
@@ -14,6 +14,8 @@
 		<p> para que la letra sea cursiva es con <"em">  </p>
 		<h2>PRACTICAR DE ACÁ</h2>
 		<a href="https://www.w3schools.com/ ">Link2</a><br/>
-		<a>La etiqueta "Br" permite un salto de línea</a>
+		<p>La etiqueta "Br" permite un salto de línea</p>
+		<img src="foto.jpg" width="104" height="142"><br/>
+		<button>Boton</button>
 	</body>
 </html>
